# BasicComponents

./: AGENTS.md  CMakeLists.txt  README.md
bsp/can_driver/: CMakeLists.txt  can_driver.cpp  can_driver.h  can_driver.hpp  cpkg.toml
bsp/gpio_driver/: CMakeLists.txt  cpkg.toml  gpio_driver.c  gpio_driver.cpp  gpio_driver.h  gpio_driver.hpp  pwm.h
bsp/i2c_driver/: CMakeLists.txt  I2CBusDMA.cpp  I2CBusDMA.hpp  README.md  cpkg.toml
libs/concurrency/: AtomicFlagLock.hpp  CMakeLists.txt  cpkg.toml
libs/control/: CMakeLists.txt
libs/control/mit_pd/: CMakeLists.txt  mit_pd.cpp  mit_pd.hpp
libs/control/pid_motor/: CMakeLists.txt  pid_motor.cpp  pid_motor.hpp
libs/control/pid_pd/: CMakeLists.txt  pid_pd.cpp  pid_pd.hpp
libs/crc/: CRC16.hpp
libs/fixed_map/: FixedPointerMap.hpp
libs/math/: CMakeLists.txt
libs/math/EKF/: CMakeLists.txt  EKF.hpp  cpkg.toml
libs/math/Geometry/: CMakeLists.txt  Euler.hpp  Pose.hpp  Quaternion.hpp  cpkg.toml
libs/math/LinearAlgebra/: CMakeLists.txt  Mat.hpp  Vec.hpp  cpkg.toml
libs/math/geom/: CMakeLists.txt  Euler.hpp  Pose.hpp  Quaternion.hpp  Vec.hpp  cpkg.toml
libs/ring_buffer/: CMakeLists.txt  RingBuffer.hpp
libs/traits/: CMakeLists.txt  cpkg.toml  interface_only.hpp  no_copy.hpp  no_copy_move.hpp  no_delete.hpp  no_derive.hpp  no_heap.hpp  no_move.hpp  no_stack.hpp  static_only.hpp  traits.hpp
libs/utils/: CMakeLists.txt
libs/utils/crc/: CMakeLists.txt  crc.hpp
libs/utils/deque/: CMakeLists.txt  Deque.hpp  cpkg.toml
libs/utils/fixed_map/: CMakeLists.txt  FixedPointerMap.hpp
libs/utils/printf/: CMakeLists.txt
libs/utils/ring_buffer/: CMakeLists.txt  RingBuffer.hpp
protocol/UartRxSync/: UartRxSync.hpp
services/i2c_update_manager/: CMakeLists.txt  I2CDevice.cpp  I2CDevice.hpp  I2CUpdateManager.cpp  I2CUpdateManager.hpp  README.md  cpkg.toml
services/watchdog/: watchdog.cpp  watchdog.hpp
utils/: isr_lock.h  static_arena.hpp  utils.h
